# baby_cry_detection

./: .gitignore  README.md  baby_cry.py  pyproject.toml  setup.sh  setup_guide.md
.github/: copilot-instructions.md
ml_core/baby_cry/: __init__.py
ml_core/baby_cry/cli/: __init__.py  convert_model.py  predict.py  train.py
ml_core/baby_cry/inference/: __init__.py  predictor.py
ml_core/baby_cry/models/: __init__.py  cnn_model.py  crnn_model.py  mobile_model.py
ml_core/baby_cry/training/: __init__.py  trainer.py
ml_core/baby_cry/utils/: __init__.py  audio_utils.py  model_utils.py
mobile/: pubspec.yaml
mobile/ios/Runner.xcodeproj/: project.pbxproj
research/: baby_cry_detection.py
