[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-cry-detection"
version = "1.0.0"
description = "AI-powered baby cry detection system"
authors = [{name = "Baby Cry Detection Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "onnx>=1.14.0",
    "tensorflow>=2.13.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0"
]

[project.scripts]
baby-cry = "baby_cry:main"

[project.optional-dependencies]
dev = ["black", "flake8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["ml_core"]